gyp/common_conditions.gypi
@@ -44,10 +44,11 @@
           'GR_GL_FUNCTION_TYPE=__stdcall',
         ],
         'msvs_disabled_warnings': [
-            4345,  # This is an FYI about a behavior change from long ago.  Chrome stifles it too.
+            4275,  # An exported class was derived from a class that was not exported
+            4345,  # This is an FYI about a behavior change from long ago. Chrome stifles it too.
+            4355,  # 'this' used in base member initializer list. Off by default in newer compilers.
         ],
         'msvs_cygwin_shell': 0,
-        'msvs_disabled_warnings': [4275],
         'msvs_settings': {
           'VCCLCompilerTool': {
             'WarningLevel': '3',
